package business.events;

public record StockBankruptcyEvent(String stockSymbol){}
