package business.events;

public record StockResetEvent(String stockSymbol){}
